@@ -16,11 +16,5 @@
 # along with SAMM.  If not, see <http://www.gnu.org/licenses/>.
 #
 
-cd osgi
-
-CODEBASE="file://$(pwd)/core-0.1-SNAPSHOT.jar file://$(pwd)/api-0.1-SNAPSHOT.jar"
-java -Dcom.sun.management.jmxremote.port=12345  -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false -Dosgi.compatibility.bootdelegation=true -Djava.security.manager=java.rmi.RMISecurityManager -Djava.security.policy=../server.policy -Djava.rmi.server.codebase="$CODEBASE" -jar org.eclipse.osgi-3.6.0.v20100517.jar $@ &
-PID=$!
-echo $PID > samm.pid
-
-cd .. 
+kill -SIGHUP `cat samm.pid`
+rm -f samm.pid
